force-app/main/default/objects/Passenger__c/fields/contactnumber__c.field-meta.xml
<CustomField>
    <fullName>contactnumber__c</fullName>
    <label>contactnumber</label>
    <type>Phone</type>
</CustomField>