force-app/main/default/objects/Passenger__c/fields/frequentflynumber__c.field-meta.xml
<CustomField>
    <fullName>frequentflynumber__c</fullName>
    <label>frequentflynumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>