force-app/main/default/objects/Passenger__c/fields/mailingaddress__c.field-meta.xml
<CustomField>
    <fullName>mailingaddress__c</fullName>
    <label>mailingaddress</label>
    <type>Email</type>
</CustomField>